--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "bharti-theme",
     "displayName": "Bharti Theme",
-    "description": "A dark theme for coders on vs code made by  a indian ",
+    "description": "A dark theme for coders on vs code made by a indian boy who study in NIT Patna",
     "version": "0.0.1",
     "publisher": "Rajankumar",
     "repository": {
